--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.1",
+    "dotenv": "^16.5.0",
     "proxy": "^2.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
